add entry mapping detail endpoint
