# internal/app/webserver/openapi.gen.go
@@ -2,7 +2,7 @@
 
 // Package webserver provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.4.1 DO NOT EDIT.
+// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.5.0 DO NOT EDIT.
 package webserver
 
 import (
@@ -58,7 +58,7 @@ type EntryMapping struct {
 	DateAdded time.Time `json:"dateAdded"`
 
 	// Id The unique identifier of this entry.
-	Id string `json:"id"`
+	Id EntryMappingId `json:"id"`
 
 	// Name The name of this entry.
 	Name              string                               `json:"name"`
@@ -67,6 +67,24 @@ type EntryMapping struct {
 	// Size The size of this entry in bytes.
 	Size int64 `json:"size"`
 }
+
+// EntryMappingDetail defines model for EntryMappingDetail.
+type EntryMappingDetail struct {
+	// Id The unique identifier of this entry.
+	Id               EntryMappingId                            `json:"id"`
+	RetrieverDetails []EntryMappingDetailRetrieverDetailsInner `json:"retrieverDetails"`
+}
+
+// EntryMappingDetailRetrieverDetailsInner defines model for EntryMappingDetail_retrieverDetails_inner.
+type EntryMappingDetailRetrieverDetailsInner struct {
+	ApiResp string `json:"apiResp"`
+
+	// Id Id used to identify retrievers.
+	Id RetrieverId `json:"id"`
+}
+
+// EntryMappingId The unique identifier of this entry.
+type EntryMappingId = string
 
 // EntryMappingRetrieverFindingsInner defines model for EntryMapping_retrieverFindings_inner.
 type EntryMappingRetrieverFindingsInner struct {
@@ -134,6 +152,11 @@ type StatsDiskSpace struct {
 
 	// BytesUsed The number of bytes used.
 	BytesUsed int64 `json:"bytesUsed"`
+}
+
+// GetEntryMapping200Response defines model for getEntryMapping_200_response.
+type GetEntryMapping200Response struct {
+	Entry EntryMappingDetail `json:"entry"`
 }
 
 // GetEntryMappings200Response defines model for getEntryMappings_200_response.
@@ -212,6 +235,9 @@ type ServerInterface interface {
 	// Delete an entry mapping from all found retrievers.
 	// (DELETE /entry-mappings/{entryId})
 	DeleteEntryMapping(w http.ResponseWriter, r *http.Request, entryId string)
+	// Get the entry mapping by its ID.
+	// (GET /entry-mappings/{entryId}/details)
+	GetEntryMapping(w http.ResponseWriter, r *http.Request, entryId string)
 	// Get the information about the application.
 	// (GET /info)
 	GetInfo(w http.ResponseWriter, r *http.Request)
@@ -356,6 +382,37 @@ func (siw *ServerInterfaceWrapper) DeleteEntryMapping(w http.ResponseWriter, r *
 
 	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		siw.Handler.DeleteEntryMapping(w, r, entryId)
+	}))
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		handler = middleware(handler)
+	}
+
+	handler.ServeHTTP(w, r)
+}
+
+// GetEntryMapping operation middleware
+func (siw *ServerInterfaceWrapper) GetEntryMapping(w http.ResponseWriter, r *http.Request) {
+
+	var err error
+
+	// ------------- Path parameter "entryId" -------------
+	var entryId string
+
+	err = runtime.BindStyledParameterWithOptions("simple", "entryId", r.PathValue("entryId"), &entryId, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
+	if err != nil {
+		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "entryId", Err: err})
+		return
+	}
+
+	ctx := r.Context()
+
+	ctx = context.WithValue(ctx, BearerAuthScopes, []string{})
+
+	r = r.WithContext(ctx)
+
+	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		siw.Handler.GetEntryMapping(w, r, entryId)
 	}))
 
 	for _, middleware := range siw.HandlerMiddlewares {
@@ -556,6 +613,7 @@ func HandlerWithOptions(si ServerInterface, options StdHTTPServerOptions) http.H
 	m.HandleFunc("GET "+options.BaseURL+"/entry-mappings", wrapper.GetEntryMappings)
 	m.HandleFunc("POST "+options.BaseURL+"/entry-mappings", wrapper.RefreshEntryMappings)
 	m.HandleFunc("DELETE "+options.BaseURL+"/entry-mappings/{entryId}", wrapper.DeleteEntryMapping)
+	m.HandleFunc("GET "+options.BaseURL+"/entry-mappings/{entryId}/details", wrapper.GetEntryMapping)
 	m.HandleFunc("GET "+options.BaseURL+"/info", wrapper.GetInfo)
 	m.HandleFunc("POST "+options.BaseURL+"/login", wrapper.Login)
 	m.HandleFunc("GET "+options.BaseURL+"/retrievers", wrapper.GetRetrievers)
@@ -682,6 +740,47 @@ type DeleteEntryMapping5XXJSONResponse struct {
 }
 
 func (response DeleteEntryMapping5XXJSONResponse) VisitDeleteEntryMappingResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(response.StatusCode)
+
+	return json.NewEncoder(w).Encode(response.Body)
+}
+
+type GetEntryMappingRequestObject struct {
+	EntryId string `json:"entryId"`
+}
+
+type GetEntryMappingResponseObject interface {
+	VisitGetEntryMappingResponse(w http.ResponseWriter) error
+}
+
+type GetEntryMapping200JSONResponse GetEntryMapping200Response
+
+func (response GetEntryMapping200JSONResponse) VisitGetEntryMappingResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(200)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
+type GetEntryMapping4XXJSONResponse struct {
+	Body       ErrorResponseBody
+	StatusCode int
+}
+
+func (response GetEntryMapping4XXJSONResponse) VisitGetEntryMappingResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(response.StatusCode)
+
+	return json.NewEncoder(w).Encode(response.Body)
+}
+
+type GetEntryMapping5XXJSONResponse struct {
+	Body       ErrorResponseBody
+	StatusCode int
+}
+
+func (response GetEntryMapping5XXJSONResponse) VisitGetEntryMappingResponse(w http.ResponseWriter) error {
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(response.StatusCode)
 
@@ -869,6 +968,9 @@ type StrictServerInterface interface {
 	// Delete an entry mapping from all found retrievers.
 	// (DELETE /entry-mappings/{entryId})
 	DeleteEntryMapping(ctx context.Context, request DeleteEntryMappingRequestObject) (DeleteEntryMappingResponseObject, error)
+	// Get the entry mapping by its ID.
+	// (GET /entry-mappings/{entryId}/details)
+	GetEntryMapping(ctx context.Context, request GetEntryMappingRequestObject) (GetEntryMappingResponseObject, error)
 	// Get the information about the application.
 	// (GET /info)
 	GetInfo(ctx context.Context, request GetInfoRequestObject) (GetInfoResponseObject, error)
@@ -981,6 +1083,32 @@ func (sh *strictHandler) DeleteEntryMapping(w http.ResponseWriter, r *http.Reque
 		sh.options.ResponseErrorHandlerFunc(w, r, err)
 	} else if validResponse, ok := response.(DeleteEntryMappingResponseObject); ok {
 		if err := validResponse.VisitDeleteEntryMappingResponse(w); err != nil {
+			sh.options.ResponseErrorHandlerFunc(w, r, err)
+		}
+	} else if response != nil {
+		sh.options.ResponseErrorHandlerFunc(w, r, fmt.Errorf("unexpected response type: %T", response))
+	}
+}
+
+// GetEntryMapping operation middleware
+func (sh *strictHandler) GetEntryMapping(w http.ResponseWriter, r *http.Request, entryId string) {
+	var request GetEntryMappingRequestObject
+
+	request.EntryId = entryId
+
+	handler := func(ctx context.Context, w http.ResponseWriter, r *http.Request, request interface{}) (interface{}, error) {
+		return sh.ssi.GetEntryMapping(ctx, request.(GetEntryMappingRequestObject))
+	}
+	for _, middleware := range sh.middlewares {
+		handler = middleware(handler, "GetEntryMapping")
+	}
+
+	response, err := handler(r.Context(), w, r, request)
+
+	if err != nil {
+		sh.options.ResponseErrorHandlerFunc(w, r, err)
+	} else if validResponse, ok := response.(GetEntryMappingResponseObject); ok {
+		if err := validResponse.VisitGetEntryMappingResponse(w); err != nil {
 			sh.options.ResponseErrorHandlerFunc(w, r, err)
 		}
 	} else if response != nil {
